# autoresearch-sandboxes

./: .gitignore  README.md  prepare.py  program.md  pyproject.toml  query_sweep.py  results.tsv  sandbox-sweeps.md  sweep_harness.py
.claude/skills/: wandb-primary
agent/: prepare.py  pyproject.toml  requirements.txt  train.py
