[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous pretraining research swarm"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=1.5.0",
    "requests>=2.28.0",
    "torch>=2.1.0",
    "wandb",
]

[tool.uv.sources]
wandb = { path = "../wandb", editable = true }
