[project]
name = "autoresearch-agent"
version = "0.1.0"
description = "Autoresearch training agent — runs inside W&B sandboxes on Linux/CUDA"
requires-python = ">=3.10"
dependencies = [
    "kernels>=0.11.7",
    "numpy>=2.2.6",
    "pyarrow>=21.0.0",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "torch==2.9.1",
    "wandb>=0.19.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
